fix spacing issues from rearrange

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,11 @@ input {
 
 @media only screen and (min-width: 534px) {
   main {
+    padding: 1.4rem 2.1rem;
+  }
+}
+@media only screen and (min-width: 700px) {
+  main {
     padding: 1.4rem 7rem;
   }
 }
@@ -247,6 +252,10 @@ article {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+}
+
+.align-text\:center {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
