--- a/assets/scss/utils/_states.scss
+++ b/assets/scss/utils/_states.scss
@@ -7,3 +7,7 @@
     width: 100vw;
     overflow: hidden;
 }
+
+.align-text\:center {
+    text-align: center;
+}
